Refactor tests and services by removing unused dependencies and streamlining code structure